# index-mcp

./: .gitignore  .mcp-index.sqlite  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REVIEW_SUMMARY.md  agents.md  agents_global.md  agents_repo.md  codex-rust-info.md  config.toml  eslint.config.js  mcp_best_practices.md  package-lock.json  package.json  rust-acceleration.md  rust-best-practices.md  rust-migration.md  rust_prod_check.md  start.sh  tsconfig.json
.github/workflows/: ci.yml
crates/index-mcp-server/: Cargo.toml
crates/index-mcp-server/src/: bundle.rs  environment.rs  git_timeline.rs  graph.rs  graph_neighbors.rs  index_status.rs  ingest.rs  main.rs  remote_proxy.rs  search.rs  service.rs  watcher.rs
crates/index_mcp_native/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/index_mcp_native/src/: chunk.rs  embedding.rs  lib.rs
docs/: codex-cli-mcp.md  rust-acceleration.md  rust-migration.md
src/: changed-paths.ts  cleanup.ts  config.rs  constants.ts  context-bundle.ts  database.rs  embedding.ts  environment.ts  eviction.ts  git-timeline.ts  graph-query.ts  graph.ts  ingest.rs  ingest.ts  input-normalizer.ts  logger-config.ts  logger.ts  lookup.rs  lookup.ts  main.rs  package-metadata.ts  remote-proxy.ts  root-resolver.ts  rpc.rs  search.ts  server.rs  server.ts  status.ts  tool.rs  tools.rs  watcher.ts
src/local-backend/: server.ts
src/native/: fallback.ts  index.ts
src/types/: native.ts
tests/: changed-paths.test.ts  cleanup.test.ts  context-bundle.test.ts  embedding-cache.test.ts  gitignore.test.ts  index-status.test.ts  input-normalizer.test.ts  logger-config.test.ts  remote-proxy-config.test.ts  remote-proxy-integration.test.ts  root-resolver.test.ts  run-all.ts
