[package]
name = "index-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
globset = "0.4"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs", "sync"] }
tokio-stream = "0.1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2.5"
