[package]
name = "index_mcp_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
rayon = "1"
ignore = "0.4"
globset = "0.4"
sha2 = "0.10"
fastembed = "5.2"
once_cell = "1.19"

[build-dependencies]
napi-build = "2"
